--- a/orchestrator-service/src/main/resources/application.yml
+++ b/orchestrator-service/src/main/resources/application.yml
@@ -1,2 +1,18 @@
 server:
   port: 8080
+
+spring:
+  kafka:
+    bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
+      topic:
+        start-saga: start-saga
+        notify-ending: notify-ending
+      consumer:
+        group-id: orchestrator-group
+        auto-offset-reset: latest
+
+logging:
+  level:
+    org:
+      apache:
+        kafka: OFF
