--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -2,6 +2,14 @@ server:
   port: 8091
 
 spring:
+  kafka:
+    bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
+      topic:
+        start-saga: start-saga
+        notify-ending: notify-ending
+      consumer:
+        group-id: payment-group
+        auto-offset-reset: latest
 
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -16,3 +24,8 @@ spring:
         hibernate:
           dialect: org.hibernate.dialect.PostgreSQLDialect
 
+logging:
+  level:
+    org:
+      apache:
+        kafka: OFF
