--- a/product-validation-service/src/main/resources/application.yml
+++ b/product-validation-service/src/main/resources/application.yml
@@ -2,8 +2,16 @@ server:
   port: 8090
 
 spring:
-  datasource:
+  kafka:
+    bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
+      topic:
+        start-saga: start-saga
+        notify-ending: notify-ending
+      consumer:
+        group-id: product-validation-group
+        auto-offset-reset: latest
 
+  datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5435}/${DB_NAME:product-db}
     username: ${DB_USER:postgres}
@@ -16,3 +24,8 @@ spring:
         hibernate:
           dialect: org.hibernate.dialect.PostgreSQLDialect
 
+logging:
+  level:
+    org:
+      apache:
+        kafka: OFF
