--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -5,8 +5,9 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
       topic:
-        start-saga: start-saga
-        notify-ending: notify-ending
+        inventory-success: inventory-success
+        inventory-fail: inventory-fail
+        orchestrator: orchestrator
       consumer:
         group-id: inventory-group
         auto-offset-reset: latest
