--- a/product-validation-service/src/main/resources/application.yml
+++ b/product-validation-service/src/main/resources/application.yml
@@ -5,8 +5,9 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
       topic:
-        start-saga: start-saga
-        notify-ending: notify-ending
+        product-validation-success: product-validation-success
+        product-validation-fail: product-validation-fail
+        orchestrator: orchestrator
       consumer:
         group-id: product-validation-group
         auto-offset-reset: latest
